# template-dict

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yaml  tests.yaml
docs/: requirements.txt
docs/source/: conf.py  guide.rst  index.rst  reference.rst
src/template_dict/: __init__.py  templates.py  utils.py
